--- a/inputs/dashboard2/dashboard.Rmd
+++ b/inputs/dashboard2/dashboard.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Dashboard"
 author: "Ernesto Carrella"
-date: "February 2, 2016"
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   bookdown::html_document2:
       highlight: haddock
